2005-05-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/function-documentation.cc (ly_add_function_documentation):
	duh, use !=

	* Documentation/topdocs/INSTALL.texi (Top): add MacOS command.

	* stepmake/aclocal.m4: remove kpathsea warning, change to OPTIONAL.

	* scm/lily.scm (running-from-gui?): lowercase Darwin.

	* lily/function-documentation.cc (ly_add_function_documentation):
	use scm_hash_table_p() for checking.

2005-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths): Bugfix: pangorc is not pango.modules.

2005-05-17  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/tutorial.itely, basic-notation.itely,
	changing-defaults.itely: remove duplicate cindex entries
	that appear on the same page.

	* scm/define-grobs.scm: change default padding for TextSpanner.

	* Documentation/topdocs/AUTHORS.texi: update email address.

	* Documentation/user/global.itely: add info about \include.

2005-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/backend-library.scm (postscript->pdf): Remove (useless) .ps
	when running-from-gui.

	* scm/editor.scm (get-editor): Add platform defaults.

	* scm/backend-library.scm (postscript->pdf): Typo.

2005-05-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (running-from-gui?): Darwin never runs from GUI.

	* lily/font-config.cc (init_fontconfig): add warning about cache.

2005-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[ARGV0_RELOCATION]: Remove GS_*.

2005-05-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/horizontal-bracket.cc (print): Take care of the direction
	property so brackets above the stave point downwards. 

	* scm/define-grobs.scm (all-grob-descriptions): Set staff-padding
	for HorizontalBracket so it doesn't end up within the stave.

2005-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/GNUmakefile (default): Typo.

	* scm/lily.scm (PLATFORM): Export.

	* scm/framework-ps.scm (write-preamble)[MINGW]: Use